--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,17 @@
   color: white;
 }
 
+.Box {
+  background-color: black;
+  text-align: center;
+  justify-content: center;
+  color: white;
+  width: 30em;
+  border: 2em solid white;
+  padding: 2em;
+  margin: auto;
+}
+
 .App-link {
   color: #61dafb;
 }
